--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -42,6 +42,7 @@ body {
 
 html {
   font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-size: .975rem; /* 15px */
 }
 
 h1, h2, h3, h4, h5, h6 {
