--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -42,7 +42,7 @@ body {
 
 html {
   font-family: "PT Serif", Georgia, "Times New Roman", serif;
-  font-size: .975rem; /* 15px */
+  font-size: 1rem; /* 15px */
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -158,7 +158,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (min-width: 30em) {
   .sidebar {
-    font-size: .75rem; /* 14px */
+    font-size: .85rem; /* 14px */
   }
 }
 
