--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,9 @@
     {% for node in pages_list %}
       {% if node.title != null %}
         {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          {% unless node.exclude %}
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          {% endunless %}
         {% endif %}
       {% endif %}
     {% endfor %}
