--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-weight: 800;
   color: #313131;
-  letter-spacing: -.025rem;
+  letter-spacing: 0;
 }
 
 
@@ -150,7 +150,7 @@ h1, h2, h3, h4, h5, h6 {
   visibility: hidden;
   overflow-y: auto;
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  font-size: .875rem; /* 15px */
+  font-size: .85rem; /* 15px */
   color: rgba(255,255,255,.6);
   background-color: #202020;
   -webkit-transition: all .3s ease-in-out;
