--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p><img src="logo.png" alt="logo"></p>
+    <p><img src="/logo.png" alt="logo"></p>
   </div>
 
   <nav class="sidebar-nav">
